workshop03/bggapp-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: bggappv1-deploy
   labels:
      name: bggappv1-deploy
spec:
   replicas: 2
   selector:
      matchLabels:
         name: bggappv1-pod
   template:
      metadata:
         name: bggappv1-pod
         labels:
            name: bggappv1-pod
      spec:
         containers:
         - name: bggappv1-container
           image: stackupiss/bgg-backend:v1
           imagePullPolicy: IfNotPresent
           args:
           - --prefix
           - /v1
           ports:
           - name: bggapp-port
             containerPort: 3000
           livenessProbe:
              httpGet:
                 path: /v1/healthz
                 port: 3000
              failureThreshold: 3
              periodSeconds: 30
           resources:
              requests:
                 cpu: 100m
                 memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
   name: bggappv1-svc
   labels:
      name: bggappv1-svc
spec:
   type: ClusterIP
   selector:
      name: bggappv1-pod
   ports:
   - port: 80
     targetPort: bggapp-port
