workshop03/bggapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: bggapp-deploy
   labels:
      name: bggapp-deploy
spec:
   replicas: 1
   selector:
      matchLabels:
         name: bggapp-pod
   template:
      metadata:
         name: bggapp-pod
         labels:
            name: bggapp-pod
      spec:
         containers:
         - name: bggapp-container-v1
           image: stackupiss/bgg-backend:v1
           imagePullPolicy: IfNotPresent
           args:
           - --prefix
           - /v1
           ports:
           - name: bggapp-port-v1
             containerPort: 3000
         - name: bggapp-container-v2
           image: stackupiss/bgg-backend:v2
           imagePullPolicy: IfNotPresent
           args:
           - --prefix
           - /v2
           ports:
           - name: bggapp-port-v2
             containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
   name: bggapp-svc
   labels:
      name: bggapp-svc
spec:
   type: ClusterIP
   selector:
      name: bggapp-pod
   ports:
   - port: 80
     targetPort: bggapp-port
