workshop03/bggdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: bggdb-deploy
   labels:
      name: bggdb-deploy
spec:
   replicas: 1
   selector:
      matchLabels:
         name: bggdb-pod
   template:
      metadata:
         name: bggdb-pod
         labels:
            name: bggdb-pod
      spec:
         volumes:
         - name: bgg-db-vol
           persistentVolumeClaim:
            claimName: bgg-db-pvc
         containers:
         - name: bggdb-container
           image: stackupiss/bgg-database:v1
           imagePullPolicy: IfNotPresent
           volumeMounts:
            - name: bgg-db-vol
              mountPath: /var/lib/mysql
           ports: 
           - name: bggdb-host
             containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
   name: bggdb-svc
   labels:
      name: bggdb-svc
spec:
   type: ClusterIP
   selector:
      name: bggdb-pod
   ports:
   - port: 3306
     targetPort: bggdb-host
